Migrate the Obsidian plugin over to Authelia auth
